--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@furgonetka/ui": "1.14.11",
+    "@furgonetka/ui": "1.16.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=8080 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
